# Harry

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  config.example.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
src/: app.ts  config.rs  main.rs
src/commands/: advent-reward.ts  buddy-manage.ts  buddy-optout.ts  buddy-signup.ts  mcwhitelist.ts  mod.rs  signup.rs  signup.ts  students.rs  switch-class.ts  switch_class.rs
src/events/: interactionCreate.ts
src/handlers/: CommandHandler.ts
src/slash_arguments/: group.rs
src/structures/: Command.ts
src/utils/: Constants.ts
